--- a/app/views/fichas/show.html.erb
+++ b/app/views/fichas/show.html.erb
@@ -70,5 +70,5 @@
   <%= @ficha.Classe_de_Armadura %>
 </p>
 
-<%= link_to 'Edit', edit_ficha_path(@ficha) %> |
-<%= link_to 'Back', fichas_path %>
+<%= link_to 'Editar', edit_ficha_path(@ficha) %> |
+<%= link_to 'Voltar', fichas_path %>
