--- a/app/views/fichas/edit.html.erb
+++ b/app/views/fichas/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Ficha</h1>
+<h1>Editar Ficha</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @ficha %> |
-<%= link_to 'Back', fichas_path %>
+<%= link_to 'Mostrar', @ficha %> |
+<%= link_to 'Voltar', fichas_path %>
