Faz o layout do show

--- a/app/views/fichas/show.html.erb
+++ b/app/views/fichas/show.html.erb
@@ -1,72 +1,61 @@
+<head>
+  <link rel="stylesheet" type="text/css" href="show.css">
+</head>
+<img style="margin-top: -15px;" src="http://2.bp.blogspot.com/-BBMd4ESFCns/Va46WxSw0vI/AAAAAAAAAYs/6ZP-Z_y0S4Y/s1600/ficha-flying.jpg">
 <p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Nome:</strong>
+<p id="nome">
   <%= @ficha.Nome %>
 </p>
 
-<p>
-  <strong>Raça:</strong>
+<p id="raca">
   <%= @ficha.Raça %>
 </p>
 
-<p>
-  <strong>Classe:</strong>
+<p id="classe">
   <%= @ficha.Classe %>
 </p>
 
-<p>
-  <strong>Nível:</strong>
+<p id="nivel">
   <%= @ficha.Nível %>
 </p>
 
-<p>
-  <strong>Antecedente:</strong>
+<p id="antecedente">
   <%= @ficha.Antecedente %>
 </p>
 
-<p>
-  <strong>Alinhamento:</strong>
+<p id="alinhamento">
   <%= @ficha.Alinhamento %>
 </p>
 
-<p>
-  <strong>Dado vida:</strong>
+<p id="dado">
   <%= @ficha.Dado_Vida %>
 </p>
 
-<p>
-  <strong>Força:</strong>
+<p id="forca">
   <%= @ficha.Força %>
 </p>
 
-<p>
-  <strong>Destreza:</strong>
+<p id="destreza">
   <%= @ficha.Destreza %>
 </p>
 
-<p>
-  <strong>Constituição:</strong>
+<p id="constituicao">
   <%= @ficha.Constituição %>
 </p>
 
-<p>
-  <strong>Inteligência:</strong>
+<p id ="inteligencia">
   <%= @ficha.Inteligência %>
 </p>
 
-<p>
-  <strong>Sabedoria:</strong>
+<p id="sabedoria">
   <%= @ficha.Sabedoria %>
 </p>
 
-<p>
-  <strong>Carisma:</strong>
+<p id="carisma">
   <%= @ficha.Carisma %>
 </p>
 
-<p>
-  <strong>Classe de armadura:</strong>
+<p id="ca">
   <%= @ficha.Classe_de_Armadura %>
 </p>
 
