Conserta bugs relacionados ao layout

--- a/app/views/fichas/_form.html.erb
+++ b/app/views/fichas/_form.html.erb
@@ -1,3 +1,72 @@
+<style type="text/css">
+      .field{
+      background-color: transparent;
+    }
+    .actions{
+      margin-left: 600px;
+    }
+    #nome{
+      margin-top: -1455px;
+      margin-left: 120px;
+    }
+    #raca{
+      margin-top: -20px;
+      margin-left: 500px;
+    }
+    #classe{
+      margin-top: -90px;
+      margin-left: 500px;
+    }
+    #nivel{
+      margin-top: -41px;
+      margin-left:620px;
+    }
+    #antecedente{
+      margin-top: -41px;
+      margin-left: 695px;
+    }
+    #alinhamento{
+      margin-top: 17px;
+      margin-left: 695px;
+    }
+    #dado{
+      margin-top: 240px;
+      margin-left: 528px;
+    }
+    #forca{
+      margin-top: -160px;
+      margin-left: 75px;
+    }
+    #destreza{
+      margin-top: 100px;
+      margin-left: 75px;
+    }
+    #constituicao{
+      margin-top: 90px;
+      margin-left: 75px;
+    }
+    #inteligencia{
+      margin-top: 100px;
+      margin-left: 75px;
+    }
+    #sabedoria{
+      margin-top: 100px;
+      margin-left: 75px;
+    }
+    #carisma{
+      margin-top: 100px;
+      margin-left: 75px;
+    }
+    #ca{
+      margin-top: -740px;
+      margin-left: 429px;
+    }
+    #btnCreate{
+      margin-top: -80px;
+      margin-left: 215px;
+    }
+
+</style>
 <%= form_for(@ficha) do |f| %>
   <% if @ficha.errors.any? %>
     <div id="error_explanation">
