--- a/app/views/fichas/edit.html.erb
+++ b/app/views/fichas/edit.html.erb
@@ -2,5 +2,7 @@
 
 <%= render 'form' %>
 
+<div style="margin-top: 1160px; font-size: 30px;">
 <%= link_to 'Mostrar', @ficha %> |
 <%= link_to 'Voltar', fichas_path %>
+</div>
