--- a/app/views/fichas/show.html.erb
+++ b/app/views/fichas/show.html.erb
@@ -59,5 +59,7 @@
   <%= @ficha.Classe_de_Armadura %>
 </p>
 
+<div style="margin-top: 1210px; font-size: 30px;">
 <%= link_to 'Editar', edit_ficha_path(@ficha) %> |
 <%= link_to 'Voltar', fichas_path %>
+</div>
