--- a/app/views/fichas/show.html.erb
+++ b/app/views/fichas/show.html.erb
@@ -1,6 +1,82 @@
-<head>
-  <link rel="stylesheet" type="text/css" href="show.css">
-</head>
+<style type="text/css">
+      .field{
+      background-color: transparent;
+    }
+    .actions{
+      margin-left: 600px;
+    }
+    #nome{
+      margin-top: -1463px;
+      margin-left: 115px;
+      font-size: 25px;
+    }
+    #raca{
+      margin-top: -16px;
+      margin-left: 500px;
+      font-size: 14px;
+    }
+    #classe{
+      margin-top: -80px;
+      margin-left: 500px;
+      font-size: 14px;
+    }
+    #nivel{
+      margin-top: -32px;
+      margin-left: 575px;
+      font-size: 14px;
+    }
+    #antecedente{
+      margin-top: -32px;
+      margin-left: 710px;
+      font-size: 14px;
+    }
+    #alinhamento{
+      margin-top: 30px;
+      margin-left: 710px;
+      font-size: 14px;
+    }
+    #dado{
+      margin-top: 245px;
+      margin-left: 528px;
+      font-size: 50px;
+    }
+    #forca{
+      margin-top: -180px;
+      margin-left: 75px;
+      font-size: 50px;
+    }
+    #destreza{
+      margin-top: 120px;
+      margin-left: 75px;
+      font-size: 50px;
+    }
+    #constituicao{
+      margin-top: 115px;
+      margin-left: 75px;
+      font-size: 50px;
+    }
+    #inteligencia{
+      margin-top: 120px;
+      margin-left: 75px;
+      font-size: 50px;
+    }
+    #sabedoria{
+      margin-top: 110px;
+      margin-left: 75px;
+      font-size: 50px;
+    }
+    #carisma{
+      margin-top: 115px;
+      margin-left: 75px;
+      font-size: 50px;
+    }
+    #ca{
+      margin-top: -760px;
+      margin-left: 432px;
+      font-size: 40px;
+    }
+
+</style>
 <img style="margin-top: -15px;" src="http://2.bp.blogspot.com/-BBMd4ESFCns/Va46WxSw0vI/AAAAAAAAAYs/6ZP-Z_y0S4Y/s1600/ficha-flying.jpg">
 <p id="notice"><%= notice %></p>
 <p id="nome">
